# AI-driven-cryptocurrency-quantitative-trading-system

./: .env.example  .gitignore  BUILD_GUIDE.md  BUILD_QUICK_REF.md  BUILD_REPORT.md  BUILD_REPORT_2026-04-30.md  QUICK_START.md  README.md  backend_trader.spec  build_all.ps1  build_backend.ps1  build_frontend.ps1  diag_ccxt.spec  pyproject.toml  test_ws_direct.py  tmp_w11.txt  verify_build.ps1
configs/: system.yaml
core/: __init__.py  config.py  event.py  exceptions.py  logger.py
docker/: Dockerfile  docker-compose.yml
docs/: AI_QUANT_TRADER_EVOLUTION_STRATEGY.md  BUILD_REPORT.md  COVERAGE_REPORT.md  DEPLOYMENT_GUIDE.md  DESKTOP_CONTROL_CENTER_UI_STAGE0_CONTRACT_FREEZE.md  DESKTOP_CONTROL_CENTER_UI_UPGRADE_IMPLEMENTATION_PLAN.md  DESKTOP_CONTROL_CENTER_UI_VALIDATION_REPORT.md  DESKTOP_CONTROL_CENTER_UI_WORKTHROUGH.md  FIVE_POINT_OPTIMIZATION_GUIDE.md  HANDOVER.md  ML_PREDICTOR_ANALYSIS.md  OPENSOURCE_PROJECTS_ANALYSIS.md  PAPER_HTX_DESKTOP_E2E_INTEGRATION_TEST_PLAN.md  PHASE1_CORE_BRAIN_IMPLEMENTATION_PLAN.md  PHASE2_RISK_EVOLUTION_DATA_UPGRADE_IMPLEMENTATION_PLAN.md  PHASE3_ADVANCED_STRATEGY_SELF_EVOLUTION_IMPLEMENTATION_PLAN.md  PORTFOLIO_INTEGRATION_PLAN.md  REMAINING_PRODUCTIZATION_GAPS.md  TECH_REFERENCE_APPLICATION.md  TEST_CASES.md  TEST_EXECUTION_PLAN.md  UNIFIED_DIAGNOSTICS_PANEL_IMPLEMENTATION_PLAN.md  alpha-brain-review-zh.md  alpha-brain-tech-explanation-zh.md  coverage.json  data-fusion-workspace-review-zh-2026-04-26.md  evolution-active-candidates-detailed-zh.md  evolution-faq-troubleshooting-optimization-zh.md  evolution-workspace-review-zh.md  execution-audit-workspace-review-zh-2026-04-26.md  final-diagnostic-success-report.md  overview-review-zh.md  risk-matrix-e2e-validation-2026-04-26.md  risk-matrix-review-zh-2026-04-26.md  system-diagnostic-report-2026-04-26.md
(+255 files in other folders)
