[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-quant-system"
version = "0.1.0"
description = "AI-driven cryptocurrency spot quantitative trading system"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    # 数据与计算
    "pandas>=2.2",
    "polars>=0.20",
    "numpy>=1.26",
    "numba>=0.59",
    # 交易所接入
    "ccxt>=4.3",
    # 存储与序列化
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pyarrow>=15.0",
    # 配置与环境
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    # 异步支持
    "aiohttp>=3.9",
    "uvloop>=0.19; sys_platform != 'win32'",
    # 日志与可观测
    "loguru>=0.7",
    "prometheus-client>=0.20",
    # 机器学习 (可选，按需启用)
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "optuna>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "ipykernel>=6.29",
]
torch = [
    "torch>=2.3",
]

[project.scripts]
trader = "apps.trader.main:main"
backtest = "apps.backtest.main:main"
data-collector = "apps.data.main:main"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "W", "F", "I", "UP", "ANN", "B", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.isort]
known-first-party = ["core", "modules", "apps"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "core*", "modules*"]
